<resources>
    <string name="app_name">Bessonova483_API_Network</string>
    <string name="TVLogin">Log In</string>
    <string name="tvlog">Login</string>
    <string name="TvPas">Password</string>
    <string name="chBoxSavePas">Save password</string>
    <string name="btnEnter">Enter</string>
    <string name="btnRegister">Register</string>
    <string name="btnOK">OK</string>
    <string name="btnCancel">Cancel</string>
    <string name="TVReg">Registration</string>
    <string name="BtnChangeAPIAddress">Change API Address</string>
    <string name="TVChangeAPI">Changing API Address</string>
    <string name="TVAPI">API address</string>
    <string name="TVMainMenu">Main menu</string>
    <string name="BtnViewMapList">View map list</string>
    <string name="BtnLogOut">Log out</string>
    <string name="BtnUpdateUser">Update User\'s data</string>
    <string name="btnSessions">See sessions</string>
    <string name="BtnAddMap">Add new map</string>
    <string name="btnBack">Go back</string>
    <string name="TVnewmap">Creating new map</string>
    <string name="TvMapName">Map name</string>
    <string name="btnAddnode">Add new node</string>
    <string name="Tvcreatenewnode">Creating new node</string>
    <string name="TVnodename">Node name</string>
    <string name="TVIP">IP address</string>
    <string name="TVX">X</string>
    <string name="TVY">Y</string>
    <string name="tvAgent">Agent name</string>
</resources>