<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#426C48"
    android:orientation="vertical"
    tools:context=".MainMenuActivity">

    <TextView
        android:id="@+id/TVMainMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/TVMainMenu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnMapList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onViewListClick"
            android:text="@string/BtnViewMapList" />

        <Button
            android:id="@+id/btnSession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSessionsClick"
            android:text="@string/btnSessions" />

        <Button
            android:id="@+id/btnLogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#DC0808"
            android:onClick="onLogOutClick"
            android:text="@string/BtnLogOut" />
    </LinearLayout>
</LinearLayout>