<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#673AB7"
    android:backgroundTint="#61409C"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".CreateMapActivity">

    <TextView
        android:id="@+id/tvNewMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/TVnewmap" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNodename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TvMapName" />

        <EditText
            android:id="@+id/EDItTxtnodename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name" />
    </LinearLayout>

    <Button
        android:id="@+id/btnok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onAddMapClick"
        android:text="@string/btnOK" />

    <Button
        android:id="@+id/btncancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onCancelClick"
        android:text="@string/btnCancel" />
</LinearLayout>